# black-hat-rust

./: LICENSE  README.md
sha1_cracker/: Cargo.toml  README.md
sha1_cracker/src/: main.rs
tricoder/: Cargo.toml  README.md
tricoder/src/: error.rs  main.rs  ports.rs  subdomains.rs
