[package]
name = "tricoder"
version = "1.0.0"
edition = "2021"
authors = ["A-J Roos <asjas@hey.com>"]

[dependencies]
thiserror = "1.0.30"
anyhow = "1.0.56"
rayon = "1.5.1"
trust-dns-resolver = "0.21"
reqwest = { version = "0.11.10", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
